<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="top|left"
	android:orientation="vertical">

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:text="@string/io"/>

	<EditText
		android:layout_height="wrap_content"
		android:inputType="textMultiLine"
		android:layout_width="match_parent"
		android:ems="10"
		android:hint="@string/io_hint"
		android:id="@+id/editTextIO"/>

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:text="@string/key"
		android:id="@+id/keyTextView"/>

	<EditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:ems="10"
		android:hint="@string/key_hint"
		android:id="@+id/editTextKey"/>

	<CheckBox
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/hide_key"
		android:onClick="onHideUpdate"
		android:id="@+id/hideCheckbox"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="left">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/encrypt"
			android:onClick="onEncryptButtonClick"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/decrypt"
			android:onClick="onDecryptButtonClick"/>

	</LinearLayout>

</LinearLayout>

